[B]0.0.3:[/B]
Fix for any videos
[B]0.0.1:[/B]
Initial version