@@ -13,12 +13,10 @@
         <string id="30036">1%</string>
 	<string id="30037">Stiahnuté súbory</string>
         <string id="30050">Kvalita videa</string>
-        <string id="30051">Spýtať sa</string>
-        <string id="30052">Najlepšia</string>
-        <string id="30053">Najhoršia</string>
-	<string id="30054">720p</string>
-        <string id="30055">480p</string>
-        <string id="30056">360p</string>
+        <string id="30051">Najlepšia</string>
+	<string id="30052">SD</string>
+	<string id="30053">720p</string>
+	<string id="30054">1080p</string>
 	<string id="30058">Filtruj vp8 videá</string>
 	<string id="30059">*Prehrať všetko*</string>
 	<string id="30060">Podobné videá</string>
